[metadata]
description-file = README.rst

[pyhistory]
at_line = 5

[mypy]
ignore_missing_imports = True

[bumpversion]
current_version = 0.1.1
commit = True
tag = True

[bumpversion:file:setup.py]
[bumpversion:file:pyzu/__init__.py]

[tool:pytest]
addopts = --cov-report term-missing --cov=pyzu --mypy --flake8

[flake8]
# ignoring E203 since it is not PEP8 compatible. See: https://github.com/ambv/black#slices
ignore = E203
