[bumpversion]
current_version = 0.1.2
commit = True
tag = True

[bumpversion:file:setup.py]
[bumpversion:file:pyzu/__init__.py]

[metadata]
description-file = README.rst
license-file = LICENSE

[pyhistory]
at_line = 5

[mypy]
ignore_missing_imports = True

[tool:pytest]
addopts = --cov-report term-missing --cov=pyzu --mypy --flake8

[flake8]
ignore = E203

